engine-net-2/examples/Errors/FunctionUnknownCompiled.grg
#include "Rules.grg"

sequence s0
{
	{ d:double=ff() }
}
